# meta-pytorch-hackathon

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
my_env/: README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  environment.py
tests/: __init__.py  test_environment.py  test_models.py  test_server.py
